# GaussTwin

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROGRESS.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/gausstwin-agent/src/: architectures.rs  cognitive.rs  lib.rs  reactive.rs
crates/gausstwin-ai/: Cargo.toml
crates/gausstwin-ai/benches/: ai_benchmarks.rs
crates/gausstwin-ai/src/: lib.rs  rl.rs  utils.rs
crates/gausstwin-ai/src/core/: config.rs  metrics.rs  mod.rs  state.rs  traits.rs  types.rs
crates/gausstwin-ai/src/evolution/: mod.rs
crates/gausstwin-ai/src/llm/: mod.rs
crates/gausstwin-ai/src/marl/: mod.rs
crates/gausstwin-ai/src/ml/: data.rs  layers.rs  losses.rs  metrics.rs  mod.rs  optimizers.rs  utils.rs
crates/gausstwin-ai/src/ml/models/: gnn.rs  mod.rs  transformer.rs  vision.rs
crates/gausstwin-api/: Cargo.toml
crates/gausstwin-api/src/: api.rs  auth.rs  cache.rs  config.rs  db.rs  error.rs  graphql.rs  grpc.rs  lib.rs  metrics.rs  rest.rs  server.rs  simulation_manager.rs  types.rs  utils.rs  websocket.rs
crates/gausstwin-core/: Cargo.toml
crates/gausstwin-core/benches/: core_benchmarks.rs  performance_comparison.rs  space_benchmarks.rs
crates/gausstwin-core/src/: agent.rs  ai.rs  blockchain.rs  distributed.rs  error.rs  event.rs  gpu.rs  hpc.rs  lib.rs  metrics.rs  model.rs  pool.rs  profiler.rs  quantum.rs  scheduler.rs  spatial.rs  streaming.rs  time.rs  viz.rs
crates/gausstwin-core/src/space/: continuous.rs  graph.rs  grid.rs  metrics.rs  mod.rs
crates/gausstwin-cosim/benches/: cosim_benchmarks.rs
crates/gausstwin-cosim/src/: lib.rs
crates/gausstwin-cosim/src/common/: data.rs  mod.rs  sync.rs  time.rs
crates/gausstwin-cosim/src/fmi/: mod.rs
crates/gausstwin-cosim/src/hla/: ddm.rs  mod.rs  object.rs
crates/gausstwin-data/benches/: benchmarks.rs
crates/gausstwin-data/src/: cache.rs  config.rs  error.rs  lib.rs  metrics.rs  pool.rs  store.rs  types.rs
crates/gausstwin-data/tests/: integration_test.rs
crates/gausstwin-db/src/: lib.rs
crates/gausstwin-des/benches/: event_processing.rs
crates/gausstwin-des/src/: lib.rs
crates/gausstwin-fsm/src/: lib.rs
crates/gausstwin-integration/src/: lib.rs
crates/gausstwin-integration/src/blockchain/: ethereum.rs  mod.rs
crates/gausstwin-integration/src/cloud/: alibaba.rs  aws.rs  azure.rs  gcp.rs  ibm.rs  mod.rs  oracle.rs
crates/gausstwin-integration/src/common/: mod.rs
crates/gausstwin-integration/src/connectors/: kafka.rs  mod.rs  modbus.rs  mongodb.rs  mqtt.rs  opcua.rs  postgresql.rs  rabbitmq.rs
crates/gausstwin-integration/src/industrial/: bacnet.rs  mod.rs  s7.rs
crates/gausstwin-integration/src/io/: mod.rs
crates/gausstwin-ir/: Cargo.toml
crates/gausstwin-ir/src/: lib.rs  schema.rs  units.rs  validate.rs
crates/gausstwin-ir/tests/: validate.rs
crates/gausstwin-spaces/benches/: benchmarks.rs  pathfinding_benchmarks.rs  space_benchmarks.rs
crates/gausstwin-spaces/src/: common.rs  error.rs  lib.rs  spatial_index.rs  visualization.rs
crates/gausstwin-vec/: Cargo.toml
crates/gausstwin-vec/src/: lib.rs
crates/gausstwin-visual/src/: analytics.rs  dashboard.rs  error.rs  lib.rs  scenarios.rs  server.rs
docs/: BUILD.md  EVALUATION_AND_ROADMAP.md  PHASE0_REPORT.md
