[package]
name = "gausstwin-vec"
version = "0.1.0"
edition = "2021"
authors = ["GaussTwin Team <team@gausstwin.com>"]
description = "Vector operations for GaussTwin framework"
license = "Commercial"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
approx = { workspace = true }
lru = { workspace = true }
opentelemetry = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
ordered-float = "4.2"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

